projects/compiler/test/typechecker/try/error_else_bad_destructuring.out
Error at %TEST_DIR%/typechecker/try/error_else_bad_destructuring.abra:4:26
Invalid destructuring
  |    val x = try ok() else |(e1, e2)| 456
                              ^
A value of type 'String' cannot be destructured as a tuple
