projects/compiler/test/typechecker/try/error_else_bad_destructuring.abra
func ok(): Result<Int, String> = Ok(123)

func f1(): Result<Int, Int> {
  val x = try ok() else |(e1, e2)| 456

  Ok(x + 1)
}